[tool.poetry]
name = "flask-bank-api"
version = "0.1.0"
description = "api for banking application"
authors = ["Iry Indriyanto <iry.indriyanto20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.2"
Flask-SQLAlchemy = "^3.1.1"
flask-smorest = "^0.44.0"
python-dotenv = "^1.0.1"
Flask-JWT-Extended = "^4.6.0"
mysqlclient = "^2.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
